<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sys_bluetooth_state"
                style="@style/tv"
                android:text="@string/sys_blue_state_open" />


            <TextView
                android:id="@+id/connect_state"
                style="@style/tv"
                android:text="@string/bluetooth_state_connect" />

            <Button
                android:id="@+id/oprate_readbase_info"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/buttons"
                android:text="@string/read_base_info"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/result_baseinfo"
                style="@style/tv"
                android:text="@string/base_info" />

            <Button
                android:id="@+id/oprate_readbattery_info"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttons"
                android:text="@string/read_battery_info"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/result_battery_info"
                style="@style/tv"
                android:text="@string/battery_info" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/start_recevice_data"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttons"
                    android:text="@string/start_recevice_data"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/stop_recevice_data"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/buttons"
                    android:text="@string/stop_recevice_data"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/start_recevice_data_tv"
                style="@style/tv"
                android:text="@string/wehter_recevice_data" />

            <Button
                android:id="@+id/detect_result"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/buttons"
                android:text="@string/listen_detect_result"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/detect_result_tv"
                style="@style/tv"
                android:text="@string/detect_result" />

            <Button
                android:id="@+id/get_curve_data"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/buttons"
                android:text="@string/listen_curve_result"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/curve_result_tv"
                style="@style/tv"
                android:text="@string/curve_result" />

            <Button
                android:id="@+id/disconnect_device"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/buttons"
                android:text="@string/disconnect_device"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>